[workspace]
members = ["contracts/*", "packages/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL 3.0"
repository = "https://github.com/WHELP-project/whelp-contracts"

[workspace.dependencies]
anyhow = "1"
bindings-test = { path = "./packages/bindings-test" }
cw20-base = { version = "1.1", package = "cw20-base", features = ["library"] }
coreum-wasm-sdk = "0.1.1"
cosmwasm-schema = "1.4"
cosmwasm-std = { version = "1.4", features = ["cosmwasm_1_1"] }
cw2 = "1.1"
cw20 = "1.1"
semver = "1"
cw-controllers = "1.1"
cw-multi-test = "0.16"
cw-storage-plus = "1.1"
cw-utils = "1.0"
derivative = "2.2"
dex = { path = "./packages/dex", default-features = false }
dex-factory = { path = "./contracts/factory", default-features = false }
dex-pool = { path = "./contracts/pool", default-features = false }
dex-stake = { path = "./contracts/stake", default-features = false }
dex-fee-splitter = { path = "./contracts/fee_splitter", default-features = false }
itertools = "0.10"
proptest = "1.0"
schemars = "0.8"
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = "1"
test-case = "2.2.1"
uint = "0.9"
wynd-curve-utils = { git = "https://github.com/wynddao/wynddao.git", tag = "v1.6.0", package = "wynd-utils" }

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
strip = true
