[package]
name = "dex-factory"
version = { workspace = true }
authors = ["Jakub <jakub@moonbite.space>"]
edition = { workspace = true }
description = "Dex Factory - pool contract generator"
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
coreum-wasm-sdk = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
coreum_wasm_sdk = {workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw-utils = { workspace = true }
thiserror = { workspace = true }
dex = { workspace = true }
dex-stake = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
bindings-test = { workspace = true }
cw-multi-test = { workspace = true }
cw20-base = { workspace = true }
# dex-factory = { workspace = true }
dex-pool = { workspace = true }
dex-stake = { workspace = true }
