[package]
name = "fee-splitter"
version = { workspace = true }
authors = ["Jakub <jakub@moonbite.space>", "Kalo <gangov1@gmail.com"]
edition = { workspace = true }
description = "Fee Splitter - split payments and distribute between multiple recipients"
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
coreum-wasm-sdk = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw-utils = { workspace = true }
thiserror = { workspace = true }
dex = { workspace = true }
dex-stake = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
bindings-test = { workspace = true }
cw-multi-test = { workspace = true }
cw20-base = { workspace = true }
# dex-factory = { workspace = true }
dex-pool = { workspace = true }
dex-stake = { workspace = true }
