[package]
name = "dex-pool-stable"
version = { workspace = true }
authors = ["Jakub <jakub@moonbite.space>"]
edition = { workspace = true }
description = "Stable product pool contract implementation"
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
coreum-wasm-sdk = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw-storage-plus = { workspace = true }
# dex-stake = { workspace = true }
dex = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
proptest = { workspace = true }
