[package]
name = "dex-stake"
version = { workspace = true }
authors = ["Jakub <jakub@moonbite.space>"]
edition = { workspace = true }
description = "Multi-timeframe staking contract with support for multiple external rewards for multiple tokens"
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
dex = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw-controllers = { workspace = true }
cw-storage-plus = { workspace = true }
cosmwasm-std = { workspace = true }
coreum-wasm-sdk = { workspace = true }
cosmwasm-schema = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
wynd-curve-utils = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
cw20-base = { workspace = true }
cosmwasm-schema = { workspace = true }
bindings-test = { workspace = true }
anyhow = { workspace = true }
test-case = { workspace = true }
